--- a/entrega/src/styles.css
+++ b/entrega/src/styles.css
@@ -1,6 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
 
+html, body {
+    height: 100%;
+}
 
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+table {
+    width: 100%;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.close-button {
+    float: right;
+    clear: right;
+    position: relative;
+    right: -6px;
+    top: -7px;
+}
