--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sistema de Gestion de Entrega de Tierra</title>
 </head>
 <body>
-
+    Este es el inicio
 </body>
 </html>
