--- a/entrega/src/app/components/municipio/municipio-window/municipio-window.component.html
+++ b/entrega/src/app/components/municipio/municipio-window/municipio-window.component.html
@@ -1,3 +1,40 @@
-<p>
-  municipio-window works!
-</p>
+<form class="form" [formGroup]="form" (submit)="insertarMunicipio()">
+    <h1 mat-dialog-title style="margin: 0 0">{{insertar?'Nuevo Municipio':'Modificar Municipio'}}
+        <button type="button" mat-icon-button class="close-button" (click)="onNoClick()">
+            <mat-icon style="font-size: 25px">close</mat-icon>
+        </button>
+        <hr>
+    </h1>
+    <div mat-dialog-content style="min-height: 7em;">
+        <mat-form-field class="full-width" hintLabel="Maximo 2 caracteres">
+            <input matInput #input maxlength="2" placeholder="Codigo del municipio" formControlName="codigo">
+            <mat-error *ngIf="form.controls['codigo'].errors?.required">
+                Debe insertar el codigo del municipio
+            </mat-error>
+            <mat-hint align="end">{{input.value?.length || 0}}/2</mat-hint>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+            <input matInput placeholder="Nombre del municipio" formControlName="nombre">
+            <mat-error *ngIf="form.controls['nombre'].errors?.required">
+                Debe insertar el nombre del municipio
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+            <mat-select matInput placeholder="Seleccione la provincia" formControlName="provincia" [compareWith]="compararProvincias">
+                <mat-option *ngFor="let provincia of provincias" [value]="provincia">{{provincia.nombre}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.controls['provincia'].errors?.required">Debe seleccionar la provincia.</mat-error>
+        </mat-form-field>
+    </div>
+    <div mat-dialog-actions class="boton-theme">
+        <span class="spacer"></span>
+        <button type="submit" mat-raised-button cdkFocusInitial color="primary">
+            <mat-icon>check_circle</mat-icon>
+            {{insertar?'Guardar':'Modificar'}}
+        </button>
+        <button type="button" mat-raised-button (click)="onNoClick()" color="warn">
+            <mat-icon>cancel</mat-icon>
+            Cancelar
+        </button>
+    </div>
+</form>
