--- a/entrega/src/app/components/municipio/municipio.component.html
+++ b/entrega/src/app/components/municipio/municipio.component.html
@@ -16,14 +16,17 @@
                         <div mat-card-avatar style="margin-left: 10px;">
                             <mat-icon style="font-size: 28px">person_add</mat-icon>
                         </div>
-                        <mat-card-title>Lista de Provincias</mat-card-title>
+                        <mat-card-title>Lista de Municipios</mat-card-title>
                         <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                        <button mat-fab color="primary" (click)="abrirVentana()" style="float: right;position: absolute;right: 105px;top: 10px" matTooltip="Nueva Provincia">
+                        <button mat-fab color="primary" (click)="abrirVentana()"
+                                style="float: right;position: absolute;right: 105px;top: 10px"
+                                matTooltip="Nueva Municipio">
                             <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                         </button>
                     </mat-card-header>
                     <mat-card-content style="min-height: 600px;">
-                        <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" multiTemplateDataRows matSortDisableClear matSortDirection="desc" style="width: 100%">
+                        <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" multiTemplateDataRows
+                               matSortDisableClear matSortDirection="desc" style="width: 100%">
                             <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
                             <!-- Position Column -->
@@ -37,13 +40,20 @@
                                 <td mat-cell *matCellDef="let element"> {{element.nombre}}</td>
                             </ng-container>
 
+                            <ng-container matColumnDef="provincia">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Provincia</th>
+                                <td mat-cell *matCellDef="let element"> {{element.provincia}}</td>
+                            </ng-container>
+
                             <ng-container matColumnDef="acciones" stickyEnd>
                                 <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
                                 <td mat-cell *matCellDef="let element" align="center">
-                                    <button mat-mini-fab color="accent" (click)="editarProvincia($event,element)" [matTooltip]="'Editar Provincia - ' + element.nombre">
+                                    <button mat-mini-fab color="accent" (click)="editarMunicipio($event,element)"
+                                            [matTooltip]="'Editar Municipio - ' + element.nombre">
                                         <mat-icon>mode_edit</mat-icon>
                                     </button>
-                                    <button mat-mini-fab color="warn" (click)="eliminarProvincia($event,element)" [matTooltip]="'Eliminar Provincia - ' + element.nombre">
+                                    <button mat-mini-fab color="warn" (click)="eliminarMunicipio($event,element)"
+                                            [matTooltip]="'Eliminar Municipio - ' + element.nombre">
                                         <mat-icon>delete</mat-icon>
                                     </button>
                                 </td>
@@ -69,7 +79,8 @@
                         </table>
                     </mat-card-content>
                     <mat-card-actions>
-                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[2, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize"
+                                       [pageSizeOptions]="[2, 10, 15, 20]" showFirstLastButtons></mat-paginator>
                     </mat-card-actions>
                 </mat-card>
             </div>
