--- a/entrega/src/app/components/municipio/municipio.component.html
+++ b/entrega/src/app/components/municipio/municipio.component.html
@@ -25,13 +25,13 @@
                         </button>
                     </mat-card-header>
                     <mat-card-content style="min-height: 600px;">
-                        <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" multiTemplateDataRows
-                               matSortDisableClear matSortDirection="desc" style="width: 100%">
+                        <table mat-table [dataSource]="dataSource" matSort matSortActive="codigo" multiTemplateDataRows
+                               matSortDisableClear matSortDirection="asc" style="width: 100%">
                             <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
                             <!-- Position Column -->
                             <ng-container matColumnDef="codigo">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo</th>
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Código</th>
                                 <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
                             </ng-container>
                             <!-- Name Column -->
