--- a/entrega/src/styles.css
+++ b/entrega/src/styles.css
@@ -33,3 +33,17 @@ table {
 .mat-column-acciones button:first-child {
     margin-right: 5px;
 }
+
+body {
+    font-family: Roboto, Arial, sans-serif;
+    margin: 0;
+}
+
+.basic-container {
+    padding: 30px;
+}
+
+.version-info {
+    font-size: 8pt;
+    float: right;
+}
