Estos son los cambios que hice

--- a/entrega/src/app/admin/provincia/provincia.component.html
+++ b/entrega/src/app/admin/provincia/provincia.component.html
@@ -69,7 +69,7 @@
                         </table>
                     </mat-card-content>
                     <mat-card-actions>
-                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[2, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
                     </mat-card-actions>
                 </mat-card>
             </div>
