--- a/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie-window/tipo-de-superficie-window.component.html
+++ b/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie-window/tipo-de-superficie-window.component.html
@@ -1,3 +1,30 @@
-<p>
-  tipo-de-superficie-window works!
-</p>
+<form class="form" [formGroup]="form" (submit)="insertarTipoDeSuperficie()">
+    <h1 mat-dialog-title style="margin: 0 0">{{insertar?'Nuevo Tipo De Superficie':'Modificar Tipo De Superficie'}}
+        <button type="button" mat-icon-button class="close-button" (click)="onNoClick()">
+            <mat-icon style="font-size: 25px">close</mat-icon>
+        </button>
+        <hr>
+    </h1>
+    <div mat-dialog-content style="min-height: 7em;">
+        <mat-form-field class="full-width" hintLabel="Maximo 2 caracteres">
+            <input matInput #input maxlength="2" placeholder="Codigo del Tipo de Superficie" formControlName="codigo">
+            <mat-error *ngIf="form.controls['codigo'].errors?.required">Debe insertar el codigo del Tipo de Superficie</mat-error>
+            <mat-hint align="end">{{input.value?.length || 0}}/2</mat-hint>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+            <input matInput placeholder="Nombre del Tipo de Superficie" formControlName="nombre">
+            <mat-error *ngIf="form.controls['nombre'].errors?.required">Debe insertar el nombre del Tipo de Superficie</mat-error>
+        </mat-form-field>
+    </div>
+    <div mat-dialog-actions class="boton-theme">
+        <span class="spacer"></span>
+        <button type="submit" mat-raised-button cdkFocusInitial color="primary">
+            <mat-icon>check_circle</mat-icon>
+            {{insertar?'Guardar':'Modificar'}}
+        </button>
+        <button type="button" mat-raised-button (click)="onNoClick()" color="warn">
+            <mat-icon>cancel</mat-icon>
+            Cancelar
+        </button>
+    </div>
+</form>
