--- a/entrega/src/styles.css
+++ b/entrega/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "assets/css/material-components-web.css";
+@import "assets/css/style.css";
 
 html, body {
     height: 100%;
