--- a/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie.component.html
+++ b/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie.component.html
@@ -52,11 +52,7 @@
                             </ng-container>
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                                class="element-row"
-                                (click)="selection.toggle(row)">
-                            </tr>
-                            <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                         </table>
                     </mat-card-content>
                     <mat-card-actions>
