--- a/entrega/src/app/admin/tipo-de-uso/tipo-de-uso.component.html
+++ b/entrega/src/app/admin/tipo-de-uso/tipo-de-uso.component.html
@@ -14,7 +14,7 @@
                         </button>
                     </mat-card-header>
                     <mat-card-content style="min-height: 600px;">
-                        <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" multiTemplateDataRows matSortDisableClear matSortDirection="desc" style="width: 100%">
+                        <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" matSortDisableClear matSortDirection="desc" style="width: 100%">
                             <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
                             <!-- Position Column -->
@@ -57,11 +57,7 @@
                             </ng-container>
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                                class="element-row"
-                                (click)="selection.toggle(row)">
-                            </tr>
-                            <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                         </table>
                     </mat-card-content>
                     <mat-card-actions>
