--- a/entrega/src/app/admin/admin.component.html
+++ b/entrega/src/app/admin/admin.component.html
@@ -1,6 +1,2 @@
 <app-header></app-header>
-<div class="page-header header-filter">
-    <div class="container col-md-12">
-        <router-outlet></router-outlet>
-    </div>
-</div>
+<app-centro></app-centro>
