--- a/entrega/src/app/components/user-menu/user-menu.component.html
+++ b/entrega/src/app/components/user-menu/user-menu.component.html
@@ -1,44 +1,44 @@
 <div class="toolbar-user-container">
-	<button mat-button (click)="isOpen = !isOpen" class="toolbar-user-btn" [class.open]="isOpen">
+    <button mat-button (click)="isOpen = !isOpen" class="toolbar-user-btn" [class.open]="isOpen">
   		<span fxLayout="row" fxLayoutAlign="start center">
-        <mat-icon class="avatar"  fxHide fxShow.gt-xs>account_circle</mat-icon>
+        <mat-icon class="avatar" fxHide fxShow.gt-xs>account_circle</mat-icon>
     		<span class="name" fxHide fxShow.gt-xs>Pablo Caram</span>
     		<mat-icon class="icon" fxHide fxShow.gt-xs>keyboard_arrow_down</mat-icon>
   		</span>
-  	</button>
+    </button>
 
 
-  	<div class="dropdown mat-elevation-z1" [class.open]="isOpen">
-    	<div class="content">
-      		<mat-nav-list>
-      			<mat-list-item>
-      				<a matLine >Profile</a>
-				    <button mat-icon-button>
-				       <mat-icon>account_circle</mat-icon>
-				    </button>
-      			</mat-list-item>
-      			<mat-list-item>
-      				<a matLine >Settings</a>
-				    <button mat-icon-button>
-				       <mat-icon>settings</mat-icon>
-				    </button>
-      			</mat-list-item>
-      			<mat-list-item>
-      				<a matLine >Help</a>
-				    <button mat-icon-button>
-				       <mat-icon>help</mat-icon>
-				    </button>
-      			</mat-list-item>
+    <div class="dropdown mat-elevation-z1" [class.open]="isOpen">
+        <div class="content">
+            <mat-nav-list>
+                <mat-list-item>
+                    <a matLine>Profile</a>
+                    <button mat-icon-button>
+                        <mat-icon>account_circle</mat-icon>
+                    </button>
+                </mat-list-item>
+                <mat-list-item>
+                    <a matLine>Settings</a>
+                    <button mat-icon-button>
+                        <mat-icon>settings</mat-icon>
+                    </button>
+                </mat-list-item>
+                <mat-list-item>
+                    <a matLine>Help</a>
+                    <button mat-icon-button>
+                        <mat-icon>help</mat-icon>
+                    </button>
+                </mat-list-item>
 
-      			<mat-divider></mat-divider>
+                <mat-divider></mat-divider>
 
-      			<mat-list-item>
-      				<a matLine >Logout</a>
-				    <button mat-icon-button>
-				       <mat-icon>exit_to_app</mat-icon>
-				    </button>
-      			</mat-list-item>
-      		</mat-nav-list>
-    	</div>
-  	</div>
+                <mat-list-item>
+                    <a routerLink="/login">
+                        Logout
+                        <mat-icon>exit_to_app</mat-icon>
+                    </a>
+                </mat-list-item>
+            </mat-nav-list>
+        </div>
+    </div>
 </div>
