--- a/entrega/src/app/admin/municipio/municipio.component.html
+++ b/entrega/src/app/admin/municipio/municipio.component.html
@@ -1,94 +1,103 @@
-<div class="page-header header-filter" data-parallax="true">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header card-header-primary table-actions-theme">
+<div class="card">
+    <div class="card-header ch-alt m-b-20 bgm-green">
+        <h2>Lista de Municipios
+            <small>Muestra el listado de municipios del sistema</small>
+        </h2>
+        <ul class="actions">
+            <li>
+                <a href="">
+                    <i class="zmdi zmdi-refresh-alt"></i>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="zmdi zmdi-download"></i>
+                </a>
+            </li>
+            <li class="dropdown">
+                <a href="" data-toggle="dropdown">
+                    <i class="zmdi zmdi-more-vert"></i>
+                </a>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="card-body">
-                <mat-card class="example-card">
-                    <mat-card-header>
-                        <div mat-card-avatar style="margin-left: 10px;">
-                            <mat-icon style="font-size: 28px">person_add</mat-icon>
-                        </div>
-                        <mat-card-title>Lista de Municipios</mat-card-title>
-                        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                        <button mat-fab color="primary" (click)="abrirVentana()"
-                                style="float: right;position: absolute;right: 105px;top: 10px"
-                                matTooltip="Nueva Municipio">
-                            <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
-                        </button>
-                    </mat-card-header>
-                    <mat-card-content style="min-height: 600px;">
-                        <table mat-table [dataSource]="dataSource" matSort matSortActive="codigo" multiTemplateDataRows
-                               matSortDisableClear matSortDirection="asc" style="width: 100%">
-                            <!--- Note that these columns can be defined in any order.
-                                  The actual rendered columns are set as a property on the row definition" -->
-                            <!-- Position Column -->
-                            <ng-container matColumnDef="codigo">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Código</th>
-                                <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
-                            </ng-container>
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="nombre">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
-                                <td mat-cell *matCellDef="let element"> {{element.nombre}}</td>
-                            </ng-container>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <li>
+                        <a href="">Change Date Range</a>
+                    </li>
+                    <li>
+                        <a href="">Change Graph Type</a>
+                    </li>
+                    <li>
+                        <a href="">Other Settings</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
 
-                            <ng-container matColumnDef="provincia">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Provincia</th>
-                                <td mat-cell *matCellDef="let element"> {{element.provincia|provincia}}</td>
-                            </ng-container>
+        <button class="btn btn-float waves-effect waves-effect waves-circle waves-float" mat-fab color="primary" (click)="abrirVentana()" matTooltip="Nuevo Municipio">
+            <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+        </button>
+    </div>
 
-                            <ng-container matColumnDef="acciones" stickyEnd>
-                                <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
-                                <td mat-cell *matCellDef="let element" align="center">
-                                    <button mat-mini-fab color="accent" (click)="editarMunicipio($event,element)"
-                                            [matTooltip]="'Editar Municipio - ' + element.nombre">
-                                        <mat-icon>mode_edit</mat-icon>
-                                    </button>
-                                    <button mat-mini-fab color="warn" (click)="eliminarMunicipio($event,element)"
-                                            [matTooltip]="'Eliminar Municipio - ' + element.nombre">
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
-                                </td>
-                            </ng-container>
+    <div class="card-body card-padding">
+        <mat-card class="example-card">
+            <mat-card-content style="min-height: 600px;">
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="codigo" multiTemplateDataRows
+                       matSortDisableClear matSortDirection="asc" style="width: 100%">
+                    <!--- Note that these columns can be defined in any order.
+                          The actual rendered columns are set as a property on the row definition" -->
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="codigo">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Código</th>
+                        <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
+                    </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="nombre">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
+                        <td mat-cell *matCellDef="let element"> {{element.nombre}}</td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="expandedDetail">
-                                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                                    <div class="example-element-detail"
-                                         [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
-                                        <div class="element-description">
-                                            <span class="element-description-attribution">{{element.detalles}}</span>
-                                        </div>
-                                    </div>
-                                </td>
-                            </ng-container>
+                    <ng-container matColumnDef="provincia">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Provincia</th>
+                        <td mat-cell *matCellDef="let element"> {{element.provincia|provincia}}</td>
+                    </ng-container>
 
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                                class="element-row"
-                                (click)="selection.toggle(row)">
-                            </tr>
-                            <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
-                        </table>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize"
-                                       [pageSizeOptions]="[2, 10, 15, 20]" showFirstLastButtons></mat-paginator>
-                    </mat-card-actions>
-                </mat-card>
-            </div>
-        </div>
+                    <ng-container matColumnDef="acciones" stickyEnd>
+                        <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
+                        <td mat-cell *matCellDef="let element" align="center">
+                            <button mat-mini-fab color="accent" (click)="editarMunicipio($event,element)"
+                                    [matTooltip]="'Editar Municipio - ' + element.nombre">
+                                <mat-icon>mode_edit</mat-icon>
+                            </button>
+                            <button mat-mini-fab color="warn" (click)="eliminarMunicipio($event,element)"
+                                    [matTooltip]="'Eliminar Municipio - ' + element.nombre">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="expandedDetail">
+                        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                            <div class="example-element-detail"
+                                 [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
+                                <div class="element-description">
+                                    <span class="element-description-attribution">{{element.detalles}}</span>
+                                </div>
+                            </div>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                        class="element-row"
+                        (click)="selection.toggle(row)">
+                    </tr>
+                    <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
+                </table>
+            </mat-card-content>
+            <mat-card-actions>
+                <mat-paginator [length]="resultsLength" [pageSize]="pageSize"
+                               [pageSizeOptions]="[2, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+            </mat-card-actions>
+        </mat-card>
     </div>
 </div>
-
-
-
-
-
