--- a/entrega/src/app/layout/centro/centro.component.html
+++ b/entrega/src/app/layout/centro/centro.component.html
@@ -25,7 +25,7 @@
                         <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-settings"></i> Settings</a>
                     </li>
                     <li>
-                        <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-time-restore"></i> Logout</a>
+                        <a routerLink="/login"><i class="zmdi zmdi-time-restore"></i> Logout</a>
                     </li>
                 </ul>
             </div>
@@ -60,47 +60,10 @@
                     </ul>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-collection-text"></i> Forms</a>
-
-                    <ul>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/form-elements.html">Basic Form Elements</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/form-components.html">Form Components</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/form-examples.html">Form Examples</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/form-validations.html">Form Validation</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-swap-alt"></i>User Interface</a>
-                    <ul>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/colors.html">Colors</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/animations.html">Animations</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/box-shadow.html">Box Shadow</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/buttons.html">Buttons</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/icons.html">Icons</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/alerts.html">Alerts</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/notification-dialog.html">Notifications &amp; Dialogs</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/media.html">Media</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/components.html">Components</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/other-components.html">Others</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
                     <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-trending-up"></i>Charts</a>
                     <ul>
                         <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/flot-charts.html">Flot Charts</a></li>
                         <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/other-charts.html">Other Charts</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-collection-item"></i> Sample Pages</a>
-                    <ul>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/profile-about.html">Profile</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/list-view.html">List View</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/messages.html">Messages</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/login.html">Login and Sign Up</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/lockscreen.html">Lockscreen</a></li>
-                        <li><a href="http://byrushan.com/projects/ma/1-5-1/jquery/404.html">Error 404</a></li>
-
                     </ul>
                 </li>
             </ul>
