--- a/entrega/src/app/admin/municipio/municipio.component.html
+++ b/entrega/src/app/admin/municipio/municipio.component.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
 
-        <button class="btn btn-float waves-effect waves-effect waves-circle waves-float" mat-fab color="primary" (click)="abrirVentana()" matTooltip="Nuevo Municipio">
+        <button class="btn btn-float waves-circle waves-float" mat-fab color="primary" (click)="abrirVentana()" matTooltip="Nuevo Municipio">
             <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
         </button>
     </div>
@@ -41,11 +41,15 @@
     <div class="card-body card-padding">
         <mat-card class="example-card">
             <mat-card-content style="min-height: 600px;">
-                <table mat-table [dataSource]="dataSource" matSort matSortActive="codigo" multiTemplateDataRows
-                       matSortDisableClear matSortDirection="asc" style="width: 100%">
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="codigo" matSortDisableClear matSortDirection="asc" style="width: 100%">
                     <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
                     <!-- Position Column -->
+                    <ng-container matColumnDef="index">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                        <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+                    </ng-container>
+
                     <ng-container matColumnDef="codigo">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Código</th>
                         <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
@@ -87,11 +91,7 @@
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                        class="element-row"
-                        (click)="selection.toggle(row)">
-                    </tr>
-                    <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
             </mat-card-content>
             <mat-card-actions>
