--- a/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie.component.html
+++ b/entrega/src/app/admin/tipo-de-superficie/tipo-de-superficie.component.html
@@ -41,10 +41,15 @@
     <div class="card-body card-padding">
         <mat-card class="example-card">
             <mat-card-content style="min-height: 600px;">
-                <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" multiTemplateDataRows matSortDisableClear matSortDirection="desc" style="width: 100%">
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" matSortDisableClear matSortDirection="desc" style="width: 100%">
                     <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
                     <!-- Position Column -->
+                    <ng-container matColumnDef="index">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                        <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+                    </ng-container>
+
                     <ng-container matColumnDef="codigo">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo</th>
                         <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
