--- a/entrega/src/app/app.component.html
+++ b/entrega/src/app/app.component.html
@@ -1,6 +1,10 @@
 <router-outlet></router-outlet>
-
-
+<div id="ascrail2000" class="nicescroll-rails nicescroll-rails-vr" style="width: 5px; z-index: auto; cursor: default; position: fixed; top: 0px; height: 100%; right: 0px; touch-action: none; display: block; opacity: 0;">
+    <div class="nicescroll-cursors" style="position: relative; top: 0px; float: right; width: 5px; height: 486px; background-color: rgba(0, 0, 0, 0.3); border: 0px; background-clip: padding-box; border-radius: 0px; touch-action: none;"></div>
+</div>
+<div id="ascrail2000-hr" class="nicescroll-rails nicescroll-rails-hr" style="height: 5px; z-index: auto; position: fixed; left: 0px; width: 100%; bottom: 0px; cursor: default; display: none; opacity: 0;">
+    <div class="nicescroll-cursors" style="position: absolute; top: 0px; height: 5px; width: 1323px; background-color: rgba(0, 0, 0, 0.3); border: 0px; background-clip: padding-box; border-radius: 0px;"></div>
+</div>
 
 
 
