--- a/entrega/src/app/admin/solicitud/solicitud.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud.component.html
@@ -9,7 +9,7 @@
         </button>
     </div>
 
-    <div class="card-body card-padding" >
+    <div class="card-body card-padding">
         <mat-card class="example-card">
             <mat-card-content style="min-height: 625px;">
                 <table mat-table [dataSource]="dataSource" matSort matSortActive="numExpediente" matSortDisableClear matSortDirection="desc" style="width: 100%">
@@ -38,7 +38,7 @@
                     <!-- Name Column -->
                     <ng-container matColumnDef="fechaSolicitud">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Solic.</th>
-                        <td mat-cell *matCellDef="let element"> {{element.fechaSolicitud}}</td>
+                        <td mat-cell *matCellDef="let element"> {{element.fechaSolicitud|date:'dd/MM/yyyy'}}</td>
                     </ng-container>
                     <!-- Name Column -->
                     <ng-container matColumnDef="areaSolicitada">
